js/src/tests/test262/built-ins/Promise/reject/ctx-non-ctor.js
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
eval
)
;
}
)
;
reportCompare
(
0
0
)
;
